# log-pilot

./: .gitignore  .logpilot.example.yaml  AGENTS.md  README.md  pyproject.toml
docs/: PRD.md  TECHNICAL_DESIGN.md
examples/: sample_service.py
scripts/: build_desktop_engine.py  logpilot_engine_entry.py
src/logpilot/: __init__.py  ai.py  app_logging.py  cli.py  config.py  desktop_engine.py  fixes.py  history.py  languages.py  locking.py  models.py  native_parser.py  native_parser_client.py  native_parser_worker.py  parsers.py  patching.py  pipeline.py  planning.py  remediation.py  reporting.py  result_store.py  rules.py  runtime.py  scan_jobs.py  scan_runner.py  scanner.py  settings.py  storage.py  web.py
src/logpilot/web_assets/: index.html
src/logpilot/web_assets/assets/: index-BfL_OXI8.css  index-C93HVTzD.js  index-CO-tWCjv.css  index-CSIm9a_s.js
tests/: test_app_logging.py  test_desktop_engine.py  test_language_coverage.py  test_large_repository.py  test_native_parser.py  test_pipeline.py  test_remediation.py  test_runtime.py
tests/fixtures/: jkqtpbasicimagetools_minimal.h
ui/: index.html  legacy-body.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.test.ts  api.ts  desktop.ts  legacy-controller.ts  main.tsx  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
