[package]
name = "logpilot-desktop"
version = "0.1.0"
description = "LogPilot desktop client"
authors = ["LogPilot contributors"]
edition = "2021"

[lib]
name = "logpilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4"] }
